tests/community/submissions/8/False.output.error
Type error at test.sl line 2 col 5: operation "if" not defined for Function false
