tests/community/submissions/8/False.sl
function main() {
    if (false) {
        println(true);
    }
}